# Mario

./: .gitignore  CMakeLists.txt
resources/: game.conf
resources/map/1/: info
src/: main.cpp
src/events/: keyword_event_handler.cpp  keyword_event_handler.hpp
src/game/: actions.hpp  animation.cpp  animation.hpp  drawable.cpp  drawable.hpp  game.cpp  game.hpp  hud.cpp  hud.hpp  key_bindings.cpp  key_bindings.hpp  map.cpp  map.hpp  map_object.cpp  map_object.hpp  menu.cpp  menu.hpp  player.cpp  player.hpp  sprite.cpp  sprite.hpp  sprite_sequence.cpp  sprite_sequence.hpp  text_property.hpp
src/game/animations/: animation.hpp  sprites_animation.cpp  sprites_animation.hpp  text_animation.cpp  text_animation.hpp  zoom_text_animation.cpp  zoom_text_animation.hpp
src/managers/: font_manager.cpp  sound_manager.cpp  texture_manager.cpp
src/utils/: directions.hpp  utils.cpp  utils.hpp
src/utils/configuration/: configuration.cpp  configuration.hpp
src/utils/filesystem/: file.cpp
